v1.6.0/_sources/api/generated/pywr.recorders.TotalFlowNodeRecorder.rst.txt
pywr.recorders.TotalFlowNodeRecorder
====================================

.. currentmodule:: pywr.recorders

.. autoclass:: TotalFlowNodeRecorder

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~TotalFlowNodeRecorder.__init__
      ~TotalFlowNodeRecorder.after
      ~TotalFlowNodeRecorder.aggregated_value
      ~TotalFlowNodeRecorder.before
      ~TotalFlowNodeRecorder.finish
      ~TotalFlowNodeRecorder.load
      ~TotalFlowNodeRecorder.register
      ~TotalFlowNodeRecorder.reset
      ~TotalFlowNodeRecorder.setup
      ~TotalFlowNodeRecorder.unregister
      ~TotalFlowNodeRecorder.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TotalFlowNodeRecorder.agg_func
      ~TotalFlowNodeRecorder.children
      ~TotalFlowNodeRecorder.comment
      ~TotalFlowNodeRecorder.epsilon
      ~TotalFlowNodeRecorder.factor
      ~TotalFlowNodeRecorder.ignore_nan
      ~TotalFlowNodeRecorder.is_constraint
      ~TotalFlowNodeRecorder.is_objective
      ~TotalFlowNodeRecorder.model
      ~TotalFlowNodeRecorder.name
      ~TotalFlowNodeRecorder.node
      ~TotalFlowNodeRecorder.parents
   
   